# mandelbrot

./: CMakeLists.txt  LICENSE  Makefile  image.py  main.cpp  mandle.cpp  readme.MD  requirements.txt  setup.py
